--- a/contact.html
+++ b/contact.html
@@ -94,7 +94,8 @@
                         <a class="nav-link linkLight" href="services.html"><span class="hover-white">Services</span></a>
                     </li>
                     <li class="nav-item navLI">
-                        <a class="nav-link linkLight" href="#"><span class="hover-white">Photo Gallary</span></a>
+                        <a class="nav-link linkLight" href="images.html"><span class="hover-white">Photo
+                                Gallary</span></a>
                     </li>
                     <li class="nav-item navLI">
                         <a class="nav-link linkLight" href="team.html"><span class="hover-white">Team</span></a>
@@ -125,46 +126,75 @@
 
         </div>
         <div class="row">
-            <div class="col-md-4">
+            <div class="col-md-12 mx-auto">
+                <div class="row">
+                    <div class="col-md-12">
+                        <div class="column-inner">
+                            <div class="column-inner-content">
+                                <div class="column-service">
+                                    <span class="column-icon-holder"><i class="fas fa-map-marker-alt"></i></span>
+                                    <div class="column-service-content">
+                                        <div class="service-content-title">Address</div>
+                                        <div class="service-content-text">
+                                            Neeraj Varshney & Associates<br />
+                                            Chartered Accountants<br />
+                                            IInd Floor, Above Muthoot Finance
+                                            Opposite Govt Rajkiya Inter College
+                                            Sector-22, Noida-201301, Uttar Pradesh</div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-md-6 mt-3">
+                        <div class="column-inner">
+                            <div class="column-inner-content">
+                                <div class="column-service">
+                                    <span class="column-icon-holder"><i class="fas fa-phone-alt"></i></span>
+                                    <div class="column-service-content">
+                                        <div class="service-content-title">Call us</div>
+                                        <div class="service-content-text">+91-9899166417,<br />
+                                            +91-9811898225 </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <!-- <div class="col-md-5 mt-3">
                 <div class="column-inner">
                     <div class="column-inner-content">
                         <div class="column-service">
-                            <span class="column-icon-holder"><i class="fas fa-map-marker-alt"></i></span>
+                            <span class="column-icon-holder"><i class="fas fa-hashtag"></i></span>
                             <div class="column-service-content">
-                                <div class="service-content-title">Address</div>
-                                <div class="service-content-text">B-40, First Floor,
-                                    Sector- 22,
-                                    Noida-201301
-                                    Uttar Pradesh</div>
+                                <div class="service-content-title">Social Media Links</div>
+                                <div class="social-links mt-2">
+                                    <a href="#!" class="mr-2 mr-md-1 facebook-logo"><img src="assets/icons/Facebook.svg"
+                                            alt="facebook icon"></a>
+                                    <a href="#!" class="mr-2 mr-md-1 twitter-logo"><img src="assets/icons/Twitter.svg"
+                                            alt="twitter icon"></a>
+                                    <a href="#!" class="mr-2 mr-md-1 insta-logo"><img src="assets/icons/Instagram.svg"
+                                            alt="instagram icon"></a>
+                                </div>
                             </div>
                         </div>
                     </div>
                 </div>
-            </div>
-            <div class="col-md-4">
-                <div class="column-inner">
-                    <div class="column-inner-content">
-                        <div class="column-service">
-                            <span class="column-icon-holder"><i class="fas fa-phone-alt"></i></span>
-                            <div class="column-service-content">
-                                <div class="service-content-title">Call us</div>
-                                <div class="service-content-text">+91-9899166417,<br />
-                                    +91-9811898225 </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <div class="col-md-4">
-                <div class="column-inner">
-                    <div class="column-inner-content">
-                        <div class="column-service">
-                            <span class="column-icon-holder"><i class="fas fa-envelope"></i></span>
-                            <div class="column-service-content">
-                                <div class="service-content-title">Email Us</div>
-                                <div class="service-content-text"><a class="mb-0"
-                                        href="mailto:caneerajvarshney@gmail.com">
-                                        caneerajvarshney@gmail.com</a></div>
+            </div> -->
+                    <div class="col-md-6 mt-3">
+                        <div class="column-inner">
+                            <div class="column-inner-content">
+                                <div class="column-service">
+                                    <span class="column-icon-holder"><i class="fas fa-envelope"></i></span>
+                                    <div class="column-service-content">
+                                        <div class="service-content-title">Email Us</div>
+                                        <div class="service-content-text-links"><a class="mb-0"
+                                                href="mailto:caneerajvarshney@gmail.com">
+                                                caneerajvarshney@gmail.com</a></div>
+                                        <div class="service-content-text-links"><a class="mb-0"
+                                                href="mailto:caneerajvarshney@gmail.com">
+                                                capankajvarshney@gmail.com</a></div>
+                                    </div>
+                                </div>
                             </div>
                         </div>
                     </div>
@@ -172,10 +202,94 @@
             </div>
         </div>
     </div>
+    <div class="contactBlockContainer mt-4">
+        <div class="contactBlock">
+            <div class="row mt-4">
+                <div class="col-md-6">
+                    <div class="map-responsive">
+                        <iframe
+                            src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d56035.80827162502!2d77.2495312620557!3d28.6226276998058!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x390ce5060a041cdd%3A0x8b3a52a4503e95f0!2sMuthoot%20Finance%20Ltd.!5e0!3m2!1sen!2sin!4v1626075634098!5m2!1sen!2sin"
+                            width="100%" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
+                    </div>
+                </div>
+                <div class="col-md-6 py-4 px-5">
+                    <div class="hm-services-sec">
+                        <div class="hm-services-title">
+                            <h2>Request <span>A Callback</span></h2>
+                        </div>
+                    </div>
+                    <p class="mt-1 mb-3">contact us via the form and we’ll get back to you shortly.</p>
+                    <!-- <p class="mt-1 mb-3">Please fill out the form below to drop us an email.</p> -->
+                    <form action="https://formspree.io/f/xayadqyr" method="POST">
+                        <div class="form-group">
+                            <!-- <label for="full-name">Full Name</label> -->
+                            <input type="text" name="name" id="full-name" class="form-control contactForm"
+                                required="true" placeholder="Your Name">
+                        </div>
+                        <div class="form-group">
+                            <!-- <label for="usr">
+                            Email Address:
+
+                        </label> -->
+                            <input type="email" class="form-control contactForm" placeholder="Email Address"
+                                required="true" id="usr" name="_replyto">
+                        </div>
+                        <div class="form-group">
+                            <!-- <label for="message">
+                            Your message:
+
+                        </label> -->
+                            <textarea name="message" rows="5" cols="40" class="form-control contactForm-textarea"
+                                required="true" placeholder="How can we help you?" id="message"></textarea>
+                        </div>
+
+                        <!-- your other form fields go here -->
+                        <div>
+                            <button type="submit" class="allButton btn" style="transform:skew(0deg); border-radius: 50px;padding: 0 1.875em;height: 3.25em;
+                                ">Send
+                                Request</button>
+                        </div>
+
+                    </form>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <div class="social-links-contact">
+        <div class="container">
+            <div class="row">
+                <div class="col-md-12">
+                    <div class="follow">
+                        <h3>Follow Us</h3>
+                        <ul>
+                            <li><a href="https://www.free-css.com/free-css-templates"><i class="fa fa-facebook"
+                                        aria-hidden="true"></i></a></li>
+                            <li><a href="https://www.free-css.com/free-css-templates"><i class="fa fa-twitter"
+                                        aria-hidden="true"></i></a></li>
+                            <li><a href="https://www.free-css.com/free-css-templates"><i class="fa fa-instagram"
+                                        aria-hidden="true"></i></a></li>
+                            <li><a href="https://www.free-css.com/free-css-templates"><i class="fa fa-linkedin-square"
+                                        aria-hidden="true"></i></a></li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <!-- <div class="copyright">
+            <div class="container">
+              <div class="row">
+                <div class="col-md-12">
+                  <p>Copyright 2045 All Rights Reserved. By <a target="_blank" rel="nofollow noopener" href="//html.design">HTML.Design</a></p>
+                </div>
+              </div>
+            </div>
+          </div> -->
+    </div>
     <!--footer Start-->
     <footer>
 
-        <div class="footer_wrapper mt-5">
+        <div class="footer_wrapper">
             <div class="container">
                 <div class="row">
                     <div class="col-md-4">
