--- a/career.html
+++ b/career.html
@@ -94,7 +94,8 @@
                         <a class="nav-link linkLight" href="services.html"><span class="hover-white">Services</span></a>
                     </li>
                     <li class="nav-item navLI">
-                        <a class="nav-link linkLight" href="#"><span class="hover-white">Photo Gallary</span></a>
+                        <a class="nav-link linkLight" href="images.html"><span class="hover-white">Photo
+                                Gallary</span></a>
                     </li>
                     <li class="nav-item navLI">
                         <a class="nav-link linkLight" href="team.html"><span class="hover-white">Team</span></a>
