--- a/images.html
+++ b/images.html
@@ -83,7 +83,7 @@
             <div class="collapse navbar-collapse" id="collapsibleNavbar">
                 <ul class="navbar-nav w-100 justify-content-md-center">
                     <li class="nav-item navLI">
-                        <a class="nav-link linkLight" href="index.html"><span class="nav-white">Home</span></a>
+                        <a class="nav-link linkLight" href="index.html"><span class="hover-white">Home</span></a>
                     </li>
                     <li class="nav-item navLI">
                         <a class="nav-link linkLight" href="#"><span class="hover-white">About Us</span></a>
@@ -108,7 +108,8 @@
                         <a class="nav-link linkLight" href="services.html"><span class="hover-white">Services</span></a>
                     </li>
                     <li class="nav-item navLI">
-                        <a class="nav-link linkLight" href="#"><span class="hover-white">Photo Gallary</span></a>
+                        <a class="nav-link linkLight" href="images.html"><span class="nav-white">Photo
+                                Gallary</span></a>
                     </li>
                     <li class="nav-item navLI">
                         <a class="nav-link linkLight" href="team.html"><span class="hover-white">Team</span></a>
@@ -135,214 +136,40 @@
         </div>
     </header>
     <!-- Header End -->
-    <div class="gallery__warp" id="MixItUp1DB7DF">
-        <div class="mix grid__item grid--1 photo">
-            <a class="gallery_img set-bg" href="img/portfolio/1.jpg" data-setbg="img/portfolio/1.jpg"
-                style="background-image: url(&quot;img/portfolio/1.jpg&quot;);">
-            </a>
-        </div>
-        <div class="mix grid__item grid--2 travel">
-            <a class="gallery_img set-bg" href="img/portfolio/3.jpg" data-setbg="img/portfolio/3.jpg"
-                style="background-image: url(&quot;img/portfolio/3.jpg&quot;);">
-            </a>
-        </div>
-        <div class="mix grid__item grid--3 natural">
-            <a class="gallery_img set-bg" href="img/portfolio/2.jpg" data-setbg="img/portfolio/2.jpg"
-                style="background-image: url(&quot;img/portfolio/2.jpg&quot;);">
-                <div class="gellery__text">
-                    <span>Photography / Flower</span>
-                    <h3>Flower In Door</h3>
+    <div class="container mt-5">
+        <div class="d-flex">
+            <div class="d-flex flex-column mx-1">
+                <div class="my-1">
+                    <img src="assets/images/img1.jpg" width="100%">
                 </div>
-            </a>
-        </div>
-        <div class="mix grid__item grid--4 fashion">
-            <a class="gallery_img set-bg" href="img/portfolio/4.jpg" data-setbg="img/portfolio/4.jpg"
-                style="background-image: url(&quot;img/portfolio/4.jpg&quot;);">
-                <div class="gellery__text">
-                    <span>Photography / Flower</span>
-                    <h3>Flower In Door</h3>
+                <div class="my-1">
+                    <img src="assets/images/img2.jpg" width="100%">
                 </div>
-            </a>
-        </div>
-        <div class="mix grid__item grid--5 lifestyle">
-            <a class="gallery_img set-bg" href="img/portfolio/5.jpg" data-setbg="img/portfolio/5.jpg"
-                style="background-image: url(&quot;img/portfolio/5.jpg&quot;);">
-                <div class="gellery__text">
-                    <span>Photography / Flower</span>
-                    <h3>Flower In Door</h3>
+                <div class="my-1">
+                    <img src="assets/images/img3.jpg" width="100%">
                 </div>
-            </a>
-        </div>
-        <div class="mix grid__item grid--6 photo">
-            <a class="gallery_img set-bg" href="img/portfolio/19.jpg" data-setbg="img/portfolio/19.jpg"
-                style="background-image: url(&quot;img/portfolio/19.jpg&quot;);">
-                <div class="gellery__text">
-                    <span>Photography / Flower</span>
-                    <h3>Flower In Door</h3>
+            </div>
+            <div class="d-flex flex-column mx-1">
+                <div class="my-1">
+                    <img src="assets/images/img5.jpg" width="100%">
                 </div>
-            </a>
-        </div>
-        <div class="mix grid__item grid--4 natural">
-            <a class="gallery_img set-bg" href="img/portfolio/6.jpg" data-setbg="img/portfolio/6.jpg"
-                style="background-image: url(&quot;img/portfolio/6.jpg&quot;);">
-                <div class="gellery__text">
-                    <span>Photography / Flower</span>
-                    <h3>Flower In Door</h3>
+                <div class="my-1">
+                    <img src="assets/images/img6.jpg" width="100%">
                 </div>
-            </a>
-        </div>
-        <div class="mix grid__item grid--8 fashion">
-            <a class="gallery_img set-bg" href="img/portfolio/20.jpg" data-setbg="img/portfolio/20.jpg"
-                style="background-image: url(&quot;img/portfolio/20.jpg&quot;);">
-                <div class="gellery__text">
-                    <span>Photography / Flower</span>
-                    <h3>Flower In Door</h3>
+                <div class="my-1">
+                    <img src="assets/images/img7.jpg" width="100%">
                 </div>
-            </a>
-        </div>
-        <div class="mix grid__item grid--4 lifestyle">
-            <a class="gallery_img set-bg" href="img/portfolio/7.jpg" data-setbg="img/portfolio/7.jpg"
-                style="background-image: url(&quot;img/portfolio/7.jpg&quot;);">
-                <div class="gellery__text">
-                    <span>Photography / Flower</span>
-                    <h3>Flower In Door</h3>
+            </div>
+            <div class="d-flex flex-column mx-1">
+                <div class="my-1">
+                    <img src="assets/images/img4.jpg" width="100%">
                 </div>
-            </a>
-        </div>
-        <div class="mix grid__item grid--8 fashion">
-            <a class="gallery_img set-bg" href="img/portfolio/8.jpg" data-setbg="img/portfolio/8.jpg"
-                style="background-image: url(&quot;img/portfolio/8.jpg&quot;);">
-                <div class="gellery__text">
-                    <span>Photography / Flower</span>
-                    <h3>Flower In Door</h3>
-                </div>
-            </a>
-        </div>
-        <div class="mix grid__item photo">
-            <a class="gallery_img set-bg" href="img/portfolio/9.jpg" data-setbg="img/portfolio/9.jpg"
-                style="background-image: url(&quot;img/portfolio/9.jpg&quot;);">
-                <div class="gellery__text">
-                    <span>Photography / Flower</span>
-                    <h3>Flower In Door</h3>
-                </div>
-            </a>
-        </div>
-        <div class="mix grid__item grid--9 natural">
-            <a class="gallery_img set-bg" href="img/portfolio/18.jpg" data-setbg="img/portfolio/18.jpg"
-                style="background-image: url(&quot;img/portfolio/18.jpg&quot;);">
-                <div class="gellery__text">
-                    <span>Photography / Flower</span>
-                    <h3>Flower In Door</h3>
-                </div>
-            </a>
-        </div>
-        <div class="mix grid__item grid--8 fashion">
-            <a class="gallery_img set-bg" href="img/portfolio/10.jpg" data-setbg="img/portfolio/10.jpg"
-                style="background-image: url(&quot;img/portfolio/10.jpg&quot;);">
-                <div class="gellery__text">
-                    <span>Photography / Flower</span>
-                    <h3>Flower In Door</h3>
-                </div>
-            </a>
-        </div>
-        <div class="mix grid__item grid--10 lifestyle">
-            <a class="gallery_img set-bg" href="img/portfolio/11.jpg" data-setbg="img/portfolio/11.jpg"
-                style="background-image: url(&quot;img/portfolio/11.jpg&quot;);">
-                <div class="gellery__text">
-                    <span>Photography / Flower</span>
-                    <h3>Flower In Door</h3>
-                </div>
-            </a>
-        </div>
-        <div class="mix grid__item grid--2 photo">
-            <a class="gallery_img set-bg" href="img/portfolio/12.jpg" data-setbg="img/portfolio/12.jpg"
-                style="background-image: url(&quot;img/portfolio/12.jpg&quot;);">
-                <div class="gellery__text">
-                    <span>Photography / Flower</span>
-                    <h3>Flower In Door</h3>
-                </div>
-            </a>
-        </div>
-        <div class="mix grid__item grid--11 natural">
-            <a class="gallery_img set-bg" href="img/portfolio/13.jpg" data-setbg="img/portfolio/13.jpg"
-                style="background-image: url(&quot;img/portfolio/13.jpg&quot;);">
-                <div class="gellery__text">
-                    <span>Photography / Flower</span>
-                    <h3>Flower In Door</h3>
-                </div>
-            </a>
-        </div>
-        <div class="mix grid__item grid--12 fashion">
-            <a class="gallery_img set-bg" href="img/portfolio/14.jpg" data-setbg="img/portfolio/14.jpg"
-                style="background-image: url(&quot;img/portfolio/14.jpg&quot;);">
-                <div class="gellery__text">
-                    <span>Photography / Flower</span>
-                    <h3>Flower In Door</h3>
-                </div>
-            </a>
-        </div>
-        <div class="mix grid__item grid--13 lifestyle">
-            <a class="gallery_img set-bg" href="img/portfolio/15.jpg" data-setbg="img/portfolio/15.jpg"
-                style="background-image: url(&quot;img/portfolio/15.jpg&quot;);">
-                <div class="gellery__text">
-                    <span>Photography / Flower</span>
-                    <h3>Flower In Door</h3>
-                </div>
-            </a>
-        </div>
-        <div class="mix grid__item grid--11 photo">
-            <a class="gallery_img set-bg" href="img/portfolio/17.jpg" data-setbg="img/portfolio/17.jpg"
-                style="background-image: url(&quot;img/portfolio/17.jpg&quot;);">
-                <div class="gellery__text">
-                    <span>Photography / Flower</span>
-                    <h3>Flower In Door</h3>
-                </div>
-            </a>
-        </div>
-        <div class="mix grid__item grid--15 natural">
-            <a class="gallery_img set-bg" href="img/portfolio/16.jpg" data-setbg="img/portfolio/16.jpg"
-                style="background-image: url(&quot;img/portfolio/16.jpg&quot;);">
-                <div class="gellery__text">
-                    <span>Photography / Flower</span>
-                    <h3>Flower In Door</h3>
-                </div>
-            </a>
-        </div>
-    </div>
-
-
-
-
-
-    <!--Service Offering Modals Start-->
-    <div class="modal fade" id="myModal">
-        <div class="modal-dialog modal-dialog-centered modal-lg">
-            <div class="modal-content">
-
-                <!-- Modal Header -->
-                <div class="modal-header">
-                    <h4 class="modal-title">Finance and Accounts Outsourcing</h4>
-                    <button type="button" class="close" data-dismiss="modal">&times;</button>
-                </div>
-
-                <!-- Modal body -->
-                <div class="modal-body">
-                    <ul>
-                        <li>Accounting System Design & Implementation</li>
-                        <li>Financial Accounting</li>
-                        <li>Budgeting</li>
-                        <li>Financial Reporting</li>
-                        <li>MIS Reports</li>
-                        <li>Financial Analysis</li>
-                        <li>Asset Accounting Management</li>
-                        <li>Depreciation and Amortization Schedules</li>
-                    </ul>
+                <div class="my-1">
+                    <img src="assets/images/img8.jpg" width="100%">
                 </div>
             </div>
         </div>
     </div>
-    <!--Service Offering Modals End-->
-    <!-- Service Offering End-->
     <!--footer Start-->
     <footer>
 
