--- a/aboutus.html
+++ b/aboutus.html
@@ -73,29 +73,23 @@
                         <a class="nav-link linkLight" href="index.html"><span class="hover-white">Home</span></a>
                     </li>
                     <li class="nav-item navLI">
-                        <a class="nav-link linkLight" href="aboutus.html"><span class="hover-white">About Us</span></a>
+                        <a class="nav-link linkLight" href="aboutus.html"><span class="nav-white">About Us</span></a>
                     </li>
                     <li class="nav-item dropdown navLI">
                         <a class="nav-link dropdown-toggle" href="#" id="navbardrop" data-toggle="dropdown">
-                            <span class="hover-white">Important Links</span>
+                            <span class="hover-white">Knowledge Base</span>
                         </a>
                         <div class="dropdown-menu">
-                            <a class="dropdown-item" href="#">The Institue of Chartered</a>
-                            <a class="dropdown-item" href="#">Income Tax Department India</a>
-                            <a class="dropdown-item" href="#">Tax Information Network</a>
-                            <a class="dropdown-item" href="#">Tax Credit Information</a>
-                            <a class="dropdown-item" href="#">For deposit of e Tax</a>
-                            <a class="dropdown-item" href="#">For PAN Details</a>
-                            <a class="dropdown-item" href="#">Service Tax Department</a>
-                            <a class="dropdown-item" href="#">Ministry of Corporate Affairs</a>
-                            <a class="dropdown-item" href="#">Reserve Bank of India</a>
+                            <a class="dropdown-item" href="#">Link 1</a>
+                            <a class="dropdown-item" href="#">Link 2</a>
+                            <a class="dropdown-item" href="#">Link 3</a>
                         </div>
                     </li>
                     <li class="nav-item navLI">
                         <a class="nav-link linkLight" href="services.html"><span class="hover-white">Services</span></a>
                     </li>
                     <li class="nav-item navLI">
-                        <a class="nav-link linkLight" href="images.html"><span class="nav-white">Photo
+                        <a class="nav-link linkLight" href="images.html"><span class="hover-white">Photo
                                 Gallary</span></a>
                     </li>
                     <li class="nav-item navLI">
@@ -112,50 +106,65 @@
             </div>
         </nav>
         <!-- Navbar End-->
-        <div class="index-banner">
-            <div class="index-banner-block">
-                <div class="index-content-block">
-                    <div class="superheadline_outside"><span class="superheadline">CONNECTING CUSTOMERS TO YOUR
-                            BRAND</span></div>
-                    <h1 class="index-banner-title">Building Brands<br><span>With Great Passion</span></h1>
-                </div>
-            </div>
-        </div>
     </header>
     <!-- Header End -->
-    <div class="container mt-5">
-        <div class="d-flex">
-            <div class="d-flex flex-column mx-1">
-                <div class="my-1">
-                    <img src="assets/images/img1.jpg" width="100%">
-                </div>
-                <div class="my-1">
-                    <img src="assets/images/img2.jpg" width="100%">
-                </div>
-                <div class="my-1">
-                    <img src="assets/images/img3.jpg" width="100%">
+
+    <div class="container mt-4">
+        <div class="row">
+            <div class="col-md-6">
+
+                <div class="aboutus-content">
+                    <div class="circle"></div>
+                    <div class="hm-services-sec">
+                        <div class="hm-services-title">
+                            <h2>About<span> Us</span></h2>
+                        </div>
+                        <div>
+                            <p class="about-us-text"><b>Neeraj Varshney & Associates</b> was formed in
+                                2012 as a Chartered Accountancy firm. The
+                                said concern is a Proprietor concern based
+                                out of Noida having its office at Noida
+                                Our strategic policy is concentric operations
+                                and accordingly we render specialized and
+                                innovative professional services with speed,
+                                accuracy and reliability. It is speed that
+                                derives from sizeable infrastructural support
+                                and an extensive base of associates, accuracy
+                                that result from an understanding of the
+                                science and reliability that only commitment
+                                can bestow.</p>
+                            <p>
+                                Today our world is being brought together
+                                not simply by the mandate of nations, but by
+                                the power of individuals who allow
+                                themselves to hope for a better life. Nothing
+                                holds greater possibility than a world with
+                                hope for its own future. Although the road
+                                may not be easy or quick we think we can
+                                help our clients achieve even greater success.
+                                Our mission is to serve our clients with
+                                creativity, which is brought about by out of
+                                the box thinking, enthusiasm, which stems
+                                from the blend of young, experience and
+                                dynamic team members, diligence assured by
+                                cumulative years of firms experience and
+                                vision which is captured by pre-empting
+                                client needs. This principle is at the heart of
+                                our work. </p>
+                        </div>
+                    </div>
                 </div>
             </div>
-            <div class="d-flex flex-column mx-1">
-                <div class="my-1">
-                    <img src="assets/images/img5.jpg" width="100%">
+            <div class="col-md-6 d-flex flex-column justify-content-end py-4">
+                <div class="aboutus-picture-container">
+
                 </div>
-                <div class="my-1">
-                    <img src="assets/images/img6.jpg" width="100%">
-                </div>
-                <div class="my-1">
-                    <img src="assets/images/img7.jpg" width="100%">
-                </div>
-            </div>
-            <div class="d-flex flex-column mx-1">
-                <div class="my-1">
-                    <img src="assets/images/img4.jpg" width="100%">
-                </div>
-                <div class="my-1">
-                    <img src="assets/images/img8.jpg" width="100%">
+                <div class="d-flex flex-row justify-content-end w-100">
+                    <div class="circle"></div>
                 </div>
             </div>
         </div>
+
     </div>
     <!--footer Start-->
     <footer>
