--- a/services.html
+++ b/services.html
@@ -4,7 +4,11 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Neeraj Varshney & Associates</title>
+    <link rel="icon" href="assets/images/favicon.ico" />
+    <meta name="theme-color" content="#000000" />
+    <meta name="description" content="" />
+    <link rel="apple-touch-icon" href="assets/images/favicon.ico" />
     <link rel="stylesheet" href="/assets/css/common.css">
     <link rel="stylesheet" href="/assets/css/index.css">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
@@ -27,7 +31,7 @@
         <div class="logoContainer py-4">
             <div class="container-fluid">
                 <div class="row">
-                    <div class="col-md-4">
+                    <div class="col-md-6">
                         <div class="d-flex align-items-center">
                             <div class="brandLogo">
                                 <a href="index.html">
@@ -40,24 +44,15 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-md-4 d-flex justify-content-end align-items-center">
-                        <div class="headerLinks">
-                            <a class="mb-0" href="mailto:caneerajvarshney@gmail.com"><i
-                                    class="fas fa-envelope mr-1"></i>
-                                caneerajvarshney@gmail.com</a>
-                            <!-- <p class="mb-0"><i class="fas fa-envelope"></i> capankajvarshney@gmail.com</p> -->
-                            <a class="mb-0" href="tel:9899166417"><i class="fas fa-phone-alt mr-1"></i>
-                                +91-9899166417</a>
-                        </div>
-                    </div>
-                    <div class="col-md-4 d-flex justify-content-end align-items-center">
-                        <div class="social-links">
-                            <a href="#!" class="mr-2 mr-md-3 facebook-logo"><img src="assets/icons/Facebook.svg"
-                                    alt="facebook icon"></a>
-                            <a href="#!" class="mr-2 mr-md-3 twitter-logo"><img src="assets/icons/Twitter.svg"
-                                    alt="twitter icon"></a>
-                            <a href="#!" class="mr-2 mr-md-3 insta-logo"><img src="assets/icons/Instagram.svg"
-                                    alt="instagram icon"></a>
+                    <div class="col-md-6 d-flex justify-content-end">
+                        <div class="d-flex align-items-center">
+                            <div class="headerLinks">
+                                <a class="mb-0" href="tel:9899166417"><i class="fas fa-phone-alt mr-1"></i>
+                                    +91-9899166417</a>
+                                <!-- <p class="mb-0"><i class="fas fa-envelope"></i> capankajvarshney@gmail.com</p> -->
+                                <a class="mb-0" href="tel:9899166417"><i class="fas fa-phone-alt mr-1"></i>
+                                    +91-9811898225</a>
+                            </div>
                         </div>
                     </div>
                 </div>
@@ -78,7 +73,7 @@
                         <a class="nav-link linkLight" href="index.html"><span class="hover-white">Home</span></a>
                     </li>
                     <li class="nav-item navLI">
-                        <a class="nav-link linkLight" href="#"><span class="hover-white">About Us</span></a>
+                        <a class="nav-link linkLight" href="aboutus.html"><span class="hover-white">About Us</span></a>
                     </li>
                     <li class="nav-item dropdown navLI">
                         <a class="nav-link dropdown-toggle" href="#" id="navbardrop" data-toggle="dropdown">
@@ -130,8 +125,8 @@
             <div class="mt-5">
                 <div id="accordion">
                     <div class="card serviceCard p-0">
-                        <div class="card-header" style="border-radius: 25px 0!important;background-color:#fff">
-                            <a class="card-link" data-toggle="collapse" href="#collapseOne">
+                        <div class="card-header" data-toggle="collapse" href="#collapseOne">
+                            <a class="card-link">
                                 <span class="card-title serviceTitle">Legal & Secretarial <i
                                         class="fas fa-long-arrow-alt-right"></i></span>
                             </a>
@@ -171,8 +166,8 @@
                         </div>
                     </div>
                     <div class="card serviceCard p-0">
-                        <div class="card-header" style="border-radius: 25px 0!important;background-color:#fff">
-                            <a class="card-link" data-toggle="collapse" href="#collapseTwo">
+                        <div class="card-header" data-toggle="collapse" href="#collapseTwo">
+                            <a class="card-link">
                                 <span class="card-title serviceTitle">Finance & Accounting <i
                                         class="fas fa-long-arrow-alt-right"></i></span>
                             </a>
@@ -196,8 +191,8 @@
                         </div>
                     </div>
                     <div class="card serviceCard">
-                        <div class="card-header">
-                            <a class="card-link" data-toggle="collapse" href="#collapseThree">
+                        <div class="card-header" data-toggle="collapse" href="#collapseThree">
+                            <a class="card-link">
                                 <span class="card-title serviceTitle">Payroll Processing <i
                                         class="fas fa-long-arrow-alt-right"></i></span>
                             </a>
@@ -220,8 +215,8 @@
                         </div>
                     </div>
                     <div class="card serviceCard">
-                        <div class="card-header">
-                            <a class="card-link" data-toggle="collapse" href="#collapseFour">
+                        <div class="card-header" data-toggle="collapse" href="#collapseFour">
+                            <a class="card-link">
                                 <span class="card-title serviceTitle">India Entry Strategy Services <i
                                         class="fas fa-long-arrow-alt-right"></i></span>
                             </a>
@@ -258,8 +253,8 @@
                         </div>
                     </div>
                     <div class="card serviceCard">
-                        <div class="card-header">
-                            <a class="card-link" data-toggle="collapse" href="#collapseFive">
+                        <div class="card-header" data-toggle="collapse" href="#collapseFive">
+                            <a class="card-link">
                                 <span class="card-title serviceTitle">Taxation Services <i
                                         class="fas fa-long-arrow-alt-right"></i></span>
                             </a>
@@ -281,8 +276,8 @@
                         </div>
                     </div>
                     <div class="card serviceCard">
-                        <div class="card-header">
-                            <a class="card-link" data-toggle="collapse" href="#collapseSix">
+                        <div class="card-header" data-toggle="collapse" href="#collapseSix">
+                            <a class="card-link">
                                 <span class="card-title serviceTitle">Direct Tax Services <i
                                         class="fas fa-long-arrow-alt-right"></i></span>
                             </a>
@@ -305,8 +300,8 @@
                         </div>
                     </div>
                     <div class="card serviceCard">
-                        <div class="card-header">
-                            <a class="card-link" data-toggle="collapse" href="#collapseSeven">
+                        <div class="card-header" data-toggle="collapse" href="#collapseSeven">
+                            <a class="card-link">
                                 <span class="card-title serviceTitle">Indirect Tax Services <i
                                         class="fas fa-long-arrow-alt-right"></i></span>
                             </a>
@@ -324,8 +319,8 @@
                         </div>
                     </div>
                     <div class="card serviceCard">
-                        <div class="card-header">
-                            <a class="card-link" data-toggle="collapse" href="#collapseEight">
+                        <div class="card-header" data-toggle="collapse" href="#collapseEight">
+                            <a class="card-link">
                                 <span class="card-title serviceTitle">Litigation <i
                                         class="fas fa-long-arrow-alt-right"></i></span>
                             </a>
@@ -343,8 +338,8 @@
                         </div>
                     </div>
                     <div class="card serviceCard">
-                        <div class="card-header">
-                            <a class="card-link" data-toggle="collapse" href="#collapseNine">
+                        <div class="card-header" data-toggle="collapse" href="#collapseNine">
+                            <a class="card-link">
                                 <span class="card-title serviceTitle">Transfer Pricing <i
                                         class="fas fa-long-arrow-alt-right"></i></span>
                             </a>
@@ -365,8 +360,8 @@
                         </div>
                     </div>
                     <div class="card serviceCard">
-                        <div class="card-header">
-                            <a class="card-link" data-toggle="collapse" href="#collapseTen">
+                        <div class="card-header" data-toggle="collapse" href="#collapseTen">
+                            <a class="card-link">
                                 <span class="card-title serviceTitle">Audit & Assurance <i
                                         class="fas fa-long-arrow-alt-right"></i></span>
                             </a>
@@ -384,8 +379,8 @@
                         </div>
                     </div>
                     <div class="card serviceCard">
-                        <div class="card-header">
-                            <a class="card-link" data-toggle="collapse" href="#collapse11">
+                        <div class="card-header" data-toggle="collapse" href="#collapse11">
+                            <a class="card-link">
                                 <span class="card-title serviceTitle">Statutory Audits <i
                                         class="fas fa-long-arrow-alt-right"></i></span>
                             </a>
@@ -410,8 +405,8 @@
                         </div>
                     </div>
                     <div class="card serviceCard">
-                        <div class="card-header">
-                            <a class="card-link" data-toggle="collapse" href="#collapse12">
+                        <div class="card-header" data-toggle="collapse" href="#collapse12">
+                            <a class="card-link">
                                 <span class="card-title serviceTitle">Internal Audits <i
                                         class="fas fa-long-arrow-alt-right"></i></span>
                             </a>
@@ -432,8 +427,8 @@
                         </div>
                     </div>
                     <div class="card serviceCard">
-                        <div class="card-header">
-                            <a class="card-link" data-toggle="collapse" href="#collapse13">
+                        <div class="card-header" data-toggle="collapse" href="#collapse13">
+                            <a class="card-link">
                                 <span class="card-title serviceTitle">Tax Audits <i
                                         class="fas fa-long-arrow-alt-right"></i></span>
                             </a>
@@ -455,8 +450,8 @@
                         </div>
                     </div>
                     <div class="card serviceCard">
-                        <div class="card-header">
-                            <a class="card-link" data-toggle="collapse" href="#collapse14">
+                        <div class="card-header" data-toggle="collapse" href="#collapse14">
+                            <a class="card-link">
                                 <span class="card-title serviceTitle">Compliance Audits <i
                                         class="fas fa-long-arrow-alt-right"></i></span>
                             </a>
@@ -482,8 +477,8 @@
                         </div>
                     </div>
                     <div class="card serviceCard">
-                        <div class="card-header">
-                            <a class="card-link" data-toggle="collapse" href="#collapse15">
+                        <div class="card-header" data-toggle="collapse" href="#collapse15">
+                            <a class="card-link">
                                 <span class="card-title serviceTitle">System Audit <i
                                         class="fas fa-long-arrow-alt-right"></i></span>
                             </a>
@@ -513,8 +508,8 @@
                         </div>
                     </div>
                     <div class="card serviceCard">
-                        <div class="card-header">
-                            <a class="card-link" data-toggle="collapse" href="#collapse16">
+                        <div class="card-header" data-toggle="collapse" href="#collapse16">
+                            <a class="card-link">
                                 <span class="card-title serviceTitle">Other Services <i
                                         class="fas fa-long-arrow-alt-right"></i></span>
                             </a>
@@ -548,8 +543,8 @@
                         </div>
                     </div>
                     <div class="card serviceCard">
-                        <div class="card-header">
-                            <a class="card-link" data-toggle="collapse" href="#collapseSeventeen">
+                        <div class="card-header" data-toggle="collapse" href="#collapseSeventeen">
+                            <a class="card-link">
                                 <span class="card-title serviceTitle">Tax Audits <i
                                         class="fas fa-long-arrow-alt-right"></i></span>
                             </a>
