--- a/contact.html
+++ b/contact.html
@@ -4,7 +4,11 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Neeraj Varshney & Associates</title>
+    <link rel="icon" href="assets/images/favicon.ico" />
+    <meta name="theme-color" content="#000000" />
+    <meta name="description" content="" />
+    <link rel="apple-touch-icon" href="assets/images/favicon.ico" />
     <link rel="stylesheet" href="/assets/css/common.css">
     <link rel="stylesheet" href="/assets/css/index.css">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
@@ -27,7 +31,7 @@
         <div class="logoContainer py-4">
             <div class="container-fluid">
                 <div class="row">
-                    <div class="col-md-4">
+                    <div class="col-md-6">
                         <div class="d-flex align-items-center">
                             <div class="brandLogo">
                                 <a href="index.html">
@@ -40,24 +44,15 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-md-4 d-flex justify-content-end align-items-center">
-                        <div class="headerLinks">
-                            <a class="mb-0" href="mailto:caneerajvarshney@gmail.com"><i
-                                    class="fas fa-envelope mr-1"></i>
-                                caneerajvarshney@gmail.com</a>
-                            <!-- <p class="mb-0"><i class="fas fa-envelope"></i> capankajvarshney@gmail.com</p> -->
-                            <a class="mb-0" href="tel:9899166417"><i class="fas fa-phone-alt mr-1"></i>
-                                +91-9899166417</a>
-                        </div>
-                    </div>
-                    <div class="col-md-4 d-flex justify-content-end align-items-center">
-                        <div class="social-links">
-                            <a href="#!" class="mr-2 mr-md-3 facebook-logo"><img src="assets/icons/Facebook.svg"
-                                    alt="facebook icon"></a>
-                            <a href="#!" class="mr-2 mr-md-3 twitter-logo"><img src="assets/icons/Twitter.svg"
-                                    alt="twitter icon"></a>
-                            <a href="#!" class="mr-2 mr-md-3 insta-logo"><img src="assets/icons/Instagram.svg"
-                                    alt="instagram icon"></a>
+                    <div class="col-md-6 d-flex justify-content-end">
+                        <div class="d-flex align-items-center">
+                            <div class="headerLinks">
+                                <a class="mb-0" href="tel:9899166417"><i class="fas fa-phone-alt mr-1"></i>
+                                    +91-9899166417</a>
+                                <!-- <p class="mb-0"><i class="fas fa-envelope"></i> capankajvarshney@gmail.com</p> -->
+                                <a class="mb-0" href="tel:9899166417"><i class="fas fa-phone-alt mr-1"></i>
+                                    +91-9811898225</a>
+                            </div>
                         </div>
                     </div>
                 </div>
@@ -78,7 +73,7 @@
                         <a class="nav-link linkLight" href="index.html"><span class="hover-white">Home</span></a>
                     </li>
                     <li class="nav-item navLI">
-                        <a class="nav-link linkLight" href="#"><span class="hover-white">About Us</span></a>
+                        <a class="nav-link linkLight" href="aboutus.html"><span class="hover-white">About Us</span></a>
                     </li>
                     <li class="nav-item dropdown navLI">
                         <a class="nav-link dropdown-toggle" href="#" id="navbardrop" data-toggle="dropdown">
@@ -125,82 +120,68 @@
             </div>
 
         </div>
+
         <div class="row">
-            <div class="col-md-12 mx-auto">
-                <div class="row">
-                    <div class="col-md-12">
-                        <div class="column-inner">
-                            <div class="column-inner-content">
-                                <div class="column-service">
-                                    <span class="column-icon-holder"><i class="fas fa-map-marker-alt"></i></span>
-                                    <div class="column-service-content">
-                                        <div class="service-content-title">Address</div>
-                                        <div class="service-content-text">
-                                            Neeraj Varshney & Associates<br />
-                                            Chartered Accountants<br />
-                                            IInd Floor, Above Muthoot Finance
-                                            Opposite Govt Rajkiya Inter College
-                                            Sector-22, Noida-201301, Uttar Pradesh</div>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-md-6 mt-3">
-                        <div class="column-inner">
-                            <div class="column-inner-content">
-                                <div class="column-service">
-                                    <span class="column-icon-holder"><i class="fas fa-phone-alt"></i></span>
-                                    <div class="column-service-content">
-                                        <div class="service-content-title">Call us</div>
-                                        <div class="service-content-text">+91-9899166417,<br />
-                                            +91-9811898225 </div>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                    <!-- <div class="col-md-5 mt-3">
+            <div class="col-sm-12 col-lg-4">
                 <div class="column-inner">
+                    <div class="service-content-title">Address</div>
                     <div class="column-inner-content">
                         <div class="column-service">
-                            <span class="column-icon-holder"><i class="fas fa-hashtag"></i></span>
+
+                            <span class="column-icon-holder"><i class="fas fa-map-marker-alt"></i></span>
+
                             <div class="column-service-content">
-                                <div class="service-content-title">Social Media Links</div>
-                                <div class="social-links mt-2">
-                                    <a href="#!" class="mr-2 mr-md-1 facebook-logo"><img src="assets/icons/Facebook.svg"
-                                            alt="facebook icon"></a>
-                                    <a href="#!" class="mr-2 mr-md-1 twitter-logo"><img src="assets/icons/Twitter.svg"
-                                            alt="twitter icon"></a>
-                                    <a href="#!" class="mr-2 mr-md-1 insta-logo"><img src="assets/icons/Instagram.svg"
-                                            alt="instagram icon"></a>
-                                </div>
+
+                                <div class="service-content-text">
+                                    IInd Floor, Above Muthoot Finance
+                                    Opposite Govt Rajkiya Inter College
+                                    Sector-22, Noida-201301, Uttar Pradesh</div>
                             </div>
                         </div>
                     </div>
                 </div>
-            </div> -->
-                    <div class="col-md-6 mt-3">
-                        <div class="column-inner">
-                            <div class="column-inner-content">
-                                <div class="column-service">
-                                    <span class="column-icon-holder"><i class="fas fa-envelope"></i></span>
-                                    <div class="column-service-content">
-                                        <div class="service-content-title">Email Us</div>
-                                        <div class="service-content-text-links"><a class="mb-0"
-                                                href="mailto:caneerajvarshney@gmail.com">
-                                                caneerajvarshney@gmail.com</a></div>
-                                        <div class="service-content-text-links"><a class="mb-0"
-                                                href="mailto:caneerajvarshney@gmail.com">
-                                                capankajvarshney@gmail.com</a></div>
-                                    </div>
+            </div>
+            <div class="col-sm-12 col-lg-4">
+                <div class="column-inner">
+                    <div class="service-content-title">Call us</div>
+                    <div class="column-inner-content">
+                        <div class="column-service">
+                            <span class="column-icon-holder"><i class="fas fa-phone-alt"></i></span>
+                            <div class="column-service-content">
+
+                                <div class="service-content-text-links">
+                                    <a class="mb-0" href="tel:9899166417">
+                                        +91-9899166417</a><br />
+                                    <a class="mb-0" href="tel:9899166417">
+                                        +91-9811898225</a>
+
                                 </div>
                             </div>
                         </div>
                     </div>
                 </div>
             </div>
+            <div class="col-sm-12 col-lg-4">
+                <div class="column-inner">
+                    <div class="service-content-title">Email Us</div>
+                    <div class="column-inner-content">
+                        <div class="column-service">
+                            <span class="column-icon-holder"><i class="fas fa-envelope"></i></span>
+                            <div class="column-service-content">
+
+                                <div class="service-content-text-links"><a class="mb-0"
+                                        href="mailto:caneerajvarshney@gmail.com">
+                                        caneerajvarshney@gmail.com</a></div>
+                                <div class="service-content-text-links"><a class="mb-0"
+                                        href="mailto:caneerajvarshney@gmail.com">
+                                        capankajvarshney@gmail.com</a></div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
         </div>
+
     </div>
     <div class="contactBlockContainer mt-4">
         <div class="contactBlock">
