--- a/team.html
+++ b/team.html
@@ -297,7 +297,7 @@
                                             <div class="col-md-3 d-flex align-items-center justify-content-center">
                                                 <div>
                                                     <div class="team-member-image mx-auto">
-                                                        <img src="assets/images/pallavi.jpg" alt="team member" />
+                                                        <img src="assets/images/img4.jpg" alt="team member" />
                                                     </div>
                                                     <div class="box-top mt-3">
                                                         <div class="box-header">
@@ -395,7 +395,7 @@
                                             <div class="col-md-3 d-flex align-items-center justify-content-center">
                                                 <div>
                                                     <div class="team-member-image mx-auto">
-                                                        <img src="assets/images/pankaj.jpg" alt="team member" />
+                                                        <img src="assets/images/img1.jpg" alt="team member" />
                                                     </div>
                                                     <div class="box-top mt-3">
                                                         <div class="box-header">
@@ -420,7 +420,7 @@
                                             <div class="col-md-3 d-flex align-items-center justify-content-center">
                                                 <div>
                                                     <div class="team-member-image mx-auto">
-                                                        <img src="assets/images/pallavi.jpg" alt="team member" />
+                                                        <img src="assets/images/img8.jpg" alt="team member" />
                                                     </div>
                                                     <div class="box-top mt-3">
                                                         <div class="box-header">
